--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
     "require": {
         "slim/slim": "^3.10",
-        "slim/twig-view": "^2.4"
+        "slim/twig-view": "^2.4",
+        "monolog/monolog": "^1.23",
+        "slim/flash": "^0.4.0"
+    },
+    "autoload": {
+		"psr-4": {
+		 	"App\\": "app"
+		}
     }
 }
