--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "^3.10",
         "slim/twig-view": "^2.4",
         "monolog/monolog": "^1.23",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "cboden/ratchet": "^0.4.1"
     },
     "autoload": {
 		"psr-4": {
