--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "slim/twig-view": "^2.4",
         "monolog/monolog": "^1.23",
         "slim/flash": "^0.4.0",
-        "cboden/ratchet": "^0.4.1"
+        "cboden/ratchet": "^0.4.1",
+        "krugozor/database": "^1.0"
     },
     "autoload": {
 		"psr-4": {
