--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
     "autoload": {
         "psr-4": {
-            "App\\": "app"
+            "App\\": "app",
+            "MyApp\\": "src"
         }
     },
     "require": {
+        "workerman/workerman":"^3.3.6 ",
         "slim/slim": "^3.10",
         "slim/twig-view": "^2.4",
         "monolog/monolog": "^1.23",
         "slim/flash": "^0.4.0",
-        "cboden/ratchet": "^0.4.1",
         "krugozor/database": "^1.0",
-        "react/zmq": "0.3.0"
-    },
+        "cboden/ratchet": "0.4.*"
+    }
 }
