--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "App\\": "app",
-            "MyApp\\": "src"
+            "App\\": "app"
         }
     },
     "require": {
